# multi-source-candidate-transformer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: custom_output.json
samples/: ats_export.json  broken.json  recruiter_export.csv
samples/github_cache/: priya-dev.github.json  robsmith.github.json
samples/notes/: priya.txt  robert.txt
src/candidate_transformer/: __init__.py  cli.py  confidence.py  detect.py  merge.py  normalize.py  pipeline.py  projection.py  schema.py  validate.py
src/candidate_transformer/extractors/: __init__.py  ats_json.py  base.py  csv_source.py  github.py  notes.py
tests/: conftest.py  test_normalize.py  test_pipeline.py
